# iftracer-sdk

./: .gitignore  README.md  package.json  project.json  pyproject.toml
examples/: EVALUATION.md  evaluation_example.py
iftracer/sdk/: __init__.py  fetcher.py  telemetry.py
iftracer/sdk/decorators/: base.py
iftracer/sdk/evaluation/: __init__.py  batch.py  evaluator.py  models.py
iftracer/sdk/traceutils/: consts.py  set_trace_utils.py  trace_model_utils.py
iftracer/sdk/tracing/: tracing.py
tests/: conftest.py  test_association_properties.py  test_nested_tasks.py  test_privacy_no_prompts.py  test_tasks.py  test_workflows.py
