[tool.coverage.run]
branch = true
source = [ "iftracer/sdk" ]

[tool.coverage.report]
exclude_lines = [ "if TYPE_CHECKING:" ]
show_missing = true

[tool.poetry]
name = "iftracer-sdk"
version = "0.1.0"
description = "Iftracer Software Development Kit (SDK) for Python"
authors = [
  "Gal Kleinman <gal@traceloop.com>",
  "Nir Gazit <nir@traceloop.com>",
  "Tomer Friedman <tomer@traceloop.com>",
  "Zhixuan Zhou <zhixuan@insightfinder.com>"
]
repository = "https://github.com/traceloop/openllmetry"
documentation = "https://traceloop.com/docs/openllmetry"
license = "Apache-2.0"
readme = "README.md"

[[tool.poetry.packages]]
include = "iftracer/sdk"

[tool.poetry.dependencies]
python = ">=3.9,<4"
aiohttp = "3.11.7"
opentelemetry-api = "^1.25.0"
opentelemetry-sdk = "^1.25.0"
opentelemetry-exporter-otlp-proto-http = "^1.25.0"
opentelemetry-exporter-otlp-proto-grpc = "^1.25.0"
opentelemetry-instrumentation-requests = "^0.46b0"
opentelemetry-instrumentation-sqlalchemy = "^0.46b0"
opentelemetry-instrumentation-urllib3 = "^0.46b0"
opentelemetry-semantic-conventions-ai = { git = "https://github.com/insightfinder/ifllmetry.git", subdirectory = "packages/opentelemetry-semantic-conventions-ai", branch="test" }
opentelemetry-instrumentation-mistralai = { git = "https://github.com/insightfinder/ifllmetry.git", subdirectory = "packages/opentelemetry-instrumentation-mistralai", branch="test" }
opentelemetry-instrumentation-openai = { git = "https://github.com/insightfinder/ifllmetry.git", subdirectory = "packages/opentelemetry-instrumentation-openai", branch="test" }
opentelemetry-instrumentation-ollama = { git = "https://github.com/insightfinder/ifllmetry.git", subdirectory = "packages/opentelemetry-instrumentation-ollama", branch="test" }
opentelemetry-instrumentation-anthropic = { git = "https://github.com/insightfinder/ifllmetry.git", subdirectory = "packages/opentelemetry-instrumentation-anthropic", branch="test" }
opentelemetry-instrumentation-cohere = { git = "https://github.com/insightfinder/ifllmetry.git", subdirectory = "packages/opentelemetry-instrumentation-cohere", branch="test" }
opentelemetry-instrumentation-google-generativeai = { git = "https://github.com/insightfinder/ifllmetry.git", subdirectory = "packages/opentelemetry-instrumentation-google-generativeai", branch="test" }
opentelemetry-instrumentation-pinecone = { git = "https://github.com/insightfinder/ifllmetry.git", subdirectory = "packages/opentelemetry-instrumentation-pinecone", branch="test" }
opentelemetry-instrumentation-qdrant = { git = "https://github.com/insightfinder/ifllmetry.git", subdirectory = "packages/opentelemetry-instrumentation-qdrant", branch="test" }
opentelemetry-instrumentation-langchain = { git = "https://github.com/insightfinder/ifllmetry.git", subdirectory = "packages/opentelemetry-instrumentation-langchain", branch="test" }
opentelemetry-instrumentation-chromadb = { git = "https://github.com/insightfinder/ifllmetry.git", subdirectory = "packages/opentelemetry-instrumentation-chromadb", branch="test" }
opentelemetry-instrumentation-transformers = { git = "https://github.com/insightfinder/ifllmetry.git", subdirectory = "packages/opentelemetry-instrumentation-transformers", branch="test" }
opentelemetry-instrumentation-together = { git = "https://github.com/insightfinder/ifllmetry.git", subdirectory = "packages/opentelemetry-instrumentation-together", branch="test" }
opentelemetry-instrumentation-llamaindex = { git = "https://github.com/insightfinder/ifllmetry.git", subdirectory = "packages/opentelemetry-instrumentation-llamaindex", branch="test" }
opentelemetry-instrumentation-milvus = { git = "https://github.com/insightfinder/ifllmetry.git", subdirectory = "packages/opentelemetry-instrumentation-milvus", branch="test" }
opentelemetry-instrumentation-haystack = { git = "https://github.com/insightfinder/ifllmetry.git", subdirectory = "packages/opentelemetry-instrumentation-haystack", branch="test" }
opentelemetry-instrumentation-bedrock = { git = "https://github.com/insightfinder/ifllmetry.git", subdirectory = "packages/opentelemetry-instrumentation-bedrock", branch="test" }
opentelemetry-instrumentation-replicate = { git = "https://github.com/insightfinder/ifllmetry.git", subdirectory = "packages/opentelemetry-instrumentation-replicate", branch="test" }
opentelemetry-instrumentation-vertexai = { git = "https://github.com/insightfinder/ifllmetry.git", subdirectory = "packages/opentelemetry-instrumentation-vertexai", branch="test" }
opentelemetry-instrumentation-watsonx = { git = "https://github.com/insightfinder/ifllmetry.git", subdirectory = "packages/opentelemetry-instrumentation-watsonx", branch="test" }
opentelemetry-instrumentation-weaviate = { git = "https://github.com/insightfinder/ifllmetry.git", subdirectory = "packages/opentelemetry-instrumentation-weaviate", branch="test" }
opentelemetry-instrumentation-alephalpha = { git = "https://github.com/insightfinder/ifllmetry.git", subdirectory = "packages/opentelemetry-instrumentation-alephalpha", branch="test" }
opentelemetry-instrumentation-marqo = { git = "https://github.com/insightfinder/ifllmetry.git", subdirectory = "packages/opentelemetry-instrumentation-marqo", branch="test" }
colorama = "^0.4.6"
tenacity = "^8.2.3"
pydantic = ">=1"
jinja2 = "^3.1.2"
deprecated = "^1.2.14"
posthog = ">3.0.2, <4"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.2.0"
flake8 = "7.0.0"
pytest = "^8.2.2"
pytest-sugar = "1.0.0"

[tool.poetry.group.test.dependencies]
openai = "^1.31.1"
vcrpy = "^6.0.1"
pytest-recording = "^0.13.1"
pydantic = "<3"
pytest-asyncio = "^0.23.7"
anthropic = "^0.25.2"
langchain = "^0.2.5"
langchain-openai = "^0.1.15"

[build-system]
requires = [ "poetry-core" ]
build-backend = "poetry.core.masonry.api"
