[tool.coverage.run]
branch = true
source = [ "iftracer/sdk" ]

[tool.coverage.report]
exclude_lines = [ "if TYPE_CHECKING:" ]
show_missing = true

[tool.poetry]
name = "iftracer-sdk"
version = "0.2.1"
description = "Iftracer Software Development Kit (SDK) for Python"
authors = [
  "Gal Kleinman <gal@traceloop.com>",
  "Nir Gazit <nir@traceloop.com>",
  "Tomer Friedman <tomer@traceloop.com>",
  "Zhixuan Zhou <zhixuan@insightfinder.com>"
]
repository = "https://github.com/traceloop/openllmetry"
documentation = "https://traceloop.com/docs/openllmetry"
license = "Apache-2.0"
readme = "README.md"

[[tool.poetry.packages]]
include = "iftracer/sdk"

[tool.poetry.dependencies]
python = ">=3.9,<4"
aiohttp = ">=3.11.11,<4"
opentelemetry-api = ">=1.38.0,<2"
opentelemetry-sdk = ">=1.38.0,<2"
opentelemetry-exporter-otlp-proto-http = ">=1.38.0,<2"
opentelemetry-exporter-otlp-proto-grpc = ">=1.38.0,<2"
opentelemetry-instrumentation-requests = ">=0.59b0"
opentelemetry-instrumentation-sqlalchemy = ">=0.59b0"
opentelemetry-instrumentation-urllib3 = ">=0.59b0"
opentelemetry-instrumentation-logging = ">=0.59b0"
opentelemetry-instrumentation-threading = ">=0.59b0"
opentelemetry-instrumentation-redis = ">=0.59b0"

opentelemetry-if-semantic-conventions-ai = "^0.4.16"

opentelemetry-instrumentation-mistralai = ">=0.48b0"
opentelemetry-instrumentation-openai = ">=0.48b0"
opentelemetry-instrumentation-ollama = ">=0.48b0"
opentelemetry-instrumentation-anthropic = ">=0.48b0"
opentelemetry-instrumentation-cohere = ">=0.48b0"
opentelemetry-instrumentation-google-generativeai = ">=0.48b0"
opentelemetry-instrumentation-pinecone = ">=0.48b0"
opentelemetry-instrumentation-qdrant = ">=0.48b0"
opentelemetry-instrumentation-langchain = ">=0.48b0"
opentelemetry-instrumentation-chromadb = ">=0.48b0"
opentelemetry-instrumentation-transformers = ">=0.48b0"
opentelemetry-instrumentation-together = ">=0.48b0"
opentelemetry-instrumentation-llamaindex = ">=0.48b0"
opentelemetry-instrumentation-milvus = ">=0.48b0"
opentelemetry-instrumentation-haystack = ">=0.48b0"
opentelemetry-instrumentation-bedrock = ">=0.48b0"
opentelemetry-instrumentation-replicate = ">=0.48b0"
opentelemetry-instrumentation-vertexai = ">=0.48b0"
opentelemetry-instrumentation-watsonx = ">=0.48b0"
opentelemetry-instrumentation-weaviate = ">=0.48b0"
opentelemetry-instrumentation-alephalpha = ">=0.48b0"
opentelemetry-instrumentation-marqo = ">=0.48b0"

colorama = "^0.4.6"
tenacity = ">=8.2.3,<10.0"
pydantic = ">=1"
jinja2 = ">=3.1.5,<4"
deprecated = "^1.2.14"
posthog = ">3.0.2, <4"